--- a/TurnOffMinute/MainWindow.xaml
+++ b/TurnOffMinute/MainWindow.xaml
@@ -1,16 +1,21 @@
-﻿<Window x:Class="TurnOffMinute.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TurnOffMinute"
+        xmlns:Properties="clr-namespace:TurnOffMinute.Properties" x:Class="TurnOffMinute.MainWindow"
         mc:Ignorable="d"
         Title="TurnOffMinute" Height="250" Width="300">
     <Grid Background="Gray">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock HorizontalAlignment="Center" x:Name="TextBlock_Seconds" Text="60" FontSize="30"></TextBlock>
-            <Button Content="TurnOff Now" Margin="5" Width="80" Height="30" Click="ShutDown"  Background="YellowGreen" ></Button>
-            <Button Content="Stop" Margin="5" Width="80" Height="30" Click="Button_Click" Background="YellowGreen" ></Button>
+            <TextBlock HorizontalAlignment="Center" x:Name="TextBlock_Seconds" Text="{Binding sec}" FontSize="30">
+                <TextBlock.DataContext>
+                    <Properties:Resources/>
+                </TextBlock.DataContext>
+            </TextBlock>
+            <Button Content="TurnOff Now" Margin="5" Width="80" Height="30" Click="ShutDown"  Background="YellowGreen" />
+            <Button Content="Stop" Margin="5" Width="80" Height="30" Click="Button_Click" Background="YellowGreen" />
         </StackPanel>
     </Grid>
 </Window>
